# rust-actix-web-app-example

./: Cargo.toml  README.md
migrations/2020-03-08-162423_todos/: up.sql
src/: app.rs  main.rs  schema.rs
src/api/: mod.rs
src/api/dog/: dog_routes.rs  mod.rs
src/api/dog/models/: all_dogs.rs  api_dog.rs  mod.rs
src/api/todo/: actions.rs  mod.rs  todo.rs  todo_routes.rs
src/util/: custom_error.rs  http_request.rs  mod.rs
