[package]
name = "web_app"
version = "0.1.0"
authors = ["Jakyle <jjackson360@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
actix = "0.9.0"
actix-web = { version = "2.0.0", features = ["openssl"] }
actix-rt = "1"
actix-http = "1.0.1"
serde = "1.0.104"
serde_json = "1.0"
futures = "0.3.4"
failure = "0.1.6"
diesel = { version = "1.4.3", features = ["r2d2", "postgres", "uuidv07"] }
r2d2 = "0.8"
dotenv = "0.15.0"
env_logger = "0.7.1"
uuid = { version = "0.7", features = ["serde", "v4"] }